# cargo-godot

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  logo.xcf
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  opt.rs
