[package]
name = "cargo-godot"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "cargo helper for godot developpers"
repository = "https://github.com/sanpii/cargo-godot"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.18"
convert_case = "0.6"
pathdiff = "0.2"
serde_json = "1.0"
thiserror = "1.0"
which = "6.0"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
